--- a/templates/core/analytics.html
+++ b/templates/core/analytics.html
@@ -199,6 +199,8 @@ const resultsPieChart = new Chart(resultsCtx, {
     }
 });
 
+console.log(resultsCtx)
+
 // Detections Over Time Line Chart
 const detectionsCtx = document.getElementById('detectionsLineChart').getContext('2d');
 const detectionsLineChart = new Chart(detectionsCtx, {
