--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -57,7 +58,7 @@
         .hero-section {
             position: relative;
             height: 80vh;
-            background: linear-gradient(rgba(89, 65, 242, 0.7), rgba(63, 45, 176, 0.7)), url('https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(89, 65, 242, 0.7), rgba(63, 45, 176, 0.7)), url('{% static 'images/hero-bg-2.jpeg' %}') no-repeat center center/cover;
             color: var(--white);
             padding: 100px 0;
             text-align: center;
