--- a/templates/core/analytics.html
+++ b/templates/core/analytics.html
@@ -154,7 +154,7 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
